Fixed ticket container hidden behind numpad

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,6 +15,7 @@ body {height:100%; padding:0; margin:0;}
     padding-bottom:50px;
     min-height: 100%;
     margin-top: 95px;
+    overflow: hidden;
 }
 
 #inner-wrap:after {
@@ -51,7 +52,8 @@ body {height:100%; padding:0; margin:0;}
 
 #content
 {
-    width: 1000px;
-    height: 100%;
-    margin: 0 auto 0 auto;
+    width: 500px;
+    height: 380px;
+    margin: 0 auto;
+    overflow: scroll;
 }
